aws-vpc-ec2-ngnix/ec2.tf
resource "aws_instance" "nginxserver" {
  ami                    = "ami-08a6efd148b1f7504"
  instance_type          = "t2.micro"
  subnet_id              = aws_subnet.public-subnet.id
  vpc_security_group_ids = [aws_security_group.nginx-sg.id]  # Fixed: changed to nginx-sg
  associate_public_ip_address = true

  user_data = <<EOF
#!/bin/bash
sudo yum install nginx -y
sudo systemctl start nginx
EOF

  tags = {
    Name = "NginxServer"
  }
}
